leptos_macro/tests/ui/component.stderr
error: this method requires a `Scope` parameter
 --> tests/ui/component.rs:4:1
  |
4 | fn missing_scope() {}
  | ^^^^^^^^^^^^^^^^^^
  |
  = help: try `fn missing_scope(cx: Scope, /* ... */)`

error: return type is incorrect
 --> tests/ui/component.rs:7:1
  |
7 | fn missing_return_type(cx: Scope) {
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: return signature must be `-> impl IntoView`

error: supported fields are `optional`, `optional_no_strip`, `strip_option`, `default` and `into`
  --> tests/ui/component.rs:12:42
   |
12 | fn unknown_prop_option(cx: Scope, #[prop(hello)] test: bool) -> impl IntoView {
   |                                          ^^^^^

error: `optional` conflicts with mutually exclusive `optional_no_strip`
  --> tests/ui/component.rs:20:12
   |
20 |     #[prop(optional, optional_no_strip)] conflicting: bool,
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: `optional` conflicts with mutually exclusive `strip_option`
  --> tests/ui/component.rs:29:12
   |
29 |     #[prop(optional, strip_option)] conflicting: bool,
   |            ^^^^^^^^^^^^^^^^^^^^^^

error: `optional_no_strip` conflicts with mutually exclusive `strip_option`
  --> tests/ui/component.rs:38:12
   |
38 |     #[prop(optional_no_strip, strip_option)] conflicting: bool,
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: unexpected end of input, expected assignment `=`
  --> tests/ui/component.rs:47:19
   |
47 |     #[prop(default)] default: bool,
   |                   ^

error: unexpected end of input, expected one of: identifier, `::`, `<`, `_`, literal, `const`, `ref`, `mut`, `&`, parentheses, square brackets, `..`, `const`

       = help: try `#[prop(default=5 * 10)]`
  --> tests/ui/component.rs:56:22
   |
56 |     #[prop(default= |)] default: bool,
   |                      ^
